<resources>
    <string name="app_name">CALCULADORA SUMUP</string>
    <string name="title_activity_tabela">Resultado</string>
    <string name="cabecalho">TAXAS</string>
    <string name="plano_acelerado">PLANO ACELERADO</string>
    <string name="plano_economico">PLANO ECONÔMICO</string>
    <string name="taxas">TAXAS</string>
    <string name="acrescimo">ACRÉSC</string>
    <string name="tx_debito">DÉBITO</string>
    <string name="tx_credito_vista">CRÉDITO A VISTA</string>
    <string name="tx_credito_parcelado">CRÉDITO PARCELADO</string>
    <string name="lbl_valor_venda">VALOR DA VENDA</string>
    <string name="lbl_detalhes">DETALHES</string>
    <string name="lbl_parcela_unica">PARCELA ÚNICA</string>
    <string name="lbl_assumindo">ASSUMINDO</string>
    <string name="lbl_repasse">REPASSE</string>
    <string name="lbl_aumento">AUMENTO</string>
    <string name="lbl_liquido">LÍQUIDO</string>
    <string name="lbl_parcela">PARCELA</string>
    <string name="lbl_valor_taxa">VALOR DA TAXA</string>
    <string name="lbl_valor_recebido">VALOR RECEBIDO</string>
    <string name="lbl_valor_cobrar">VALOR A COBRAR</string>

    <!-- BOTÕES -->
    <string name="btn_calcular">CALCULAR</string>
    <string name="title_activity_resultado">DETALHES DA VENDA</string>

    <!-- ADS-->
    <string name="ad_app_id">ca-app-pub-3505870887693310~5972714044</string>
    <string name="ad_banner_id">ca-app-pub-3505870887693310/8124891209</string>
    <string name="ad_intersticial_id">ca-app-pub-3505870887693310/8052824731</string>

    <string name="ad_native_id">ca-app-pub-3505870887693310/1174509478</string>
    <string name="ad_native_id2">ca-app-pub-3505870887693310/4262695485</string>

    <!-- TESTE -->
    <string name="ad_testdevice_id">6A759A7567CDB6E80ED74AD2FA573E21</string>
    <string name="admob_test_id">ca-app-pub-3940256099942544/2177258514</string>
</resources>
