<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="w7.com.br.calculadorasumup.ResultadoActivity"
    tools:showIn="@layout/activity_resultado">

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner_id">
    </com.google.android.gms.ads.AdView>

    <TableLayout
        android:layout_margin="@dimen/tbl_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        style="@style/AppTheme.Tabela">
        <TableRow>
            <TextView
                android:text="@string/lbl_detalhes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_span="2"
                style="@style/AppTheme.Tabela.Cabecalho2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tx_debito"
                android:textAlignment="center"
                android:layout_span="2"
                style="@style/AppTheme.Tabela.Subcabecalho"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/lbl_parcela"
                android:textAlignment="center"
                style="@style/AppTheme.Tabela.Titulo"/>
            <TextView
                android:text="@string/lbl_valor_taxa"
                android:textAlignment="center"
                style="@style/AppTheme.Tabela.Titulo"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/lbl_parcela_unica"
                android:textAlignment="center"
                style="@style/AppTheme.Tabela.Subtitulo2"/>
            <TextView
                android:text="{0}"
                android:textAlignment="center"
                style="@style/AppTheme.Tabela.Subtitulo2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/lbl_assumindo"
                android:textAlignment="center"
                style="@style/AppTheme.Tabela.Titulo"/>
            <TextView
                android:text="{0}"
                android:textAlignment="center"
                style="@style/AppTheme.Tabela.Subtitulo2"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
